# ganondorf

./: .coveragerc  .ganondorfpix2pix_paper__norm_crash_odd.txt  .gitignore  .pylintrc  CMakeLists.txt  MANIFEST.in  README.rst  build_output.txt  requirements.txt  residual_block_notes.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-lint.yml
app/: bruising.py  brusing.py  ring.py
app/Bruising/Leak/: bruising_NL345_LIO_model.csv  (+1 more)
app/Leak/: bruising_345_345_model.csv  bruising_345_model.csv  brusing.csv  supplamentary.csv
app/NoLeak/: brusing.csv  brusing_original_model.csv  supplamentary.csv
cmake/: inplace_build.cmake
docs/: conf.py  index.rst
ganondorf/: __init__.py  __main__.py
ganondorf/core/: CMakeLists.txt
ganondorf/cyclegan/: cyc.py  discriminator.py  generator.py
ganondorf/data/: __init__.py  dataset.py  dataset_loader.py  format_image_data.py  format_medical_image_data.py  format_raw_data.py  preprocess_data.py  visualizer.py
ganondorf/federated/: pipeline.py
ganondorf/hue/: hextract.py  hue.py
ganondorf/layers/: blocks.py  residual.py
ganondorf/models/: __init__.py  generator.py  typing.py  unet.py
ganondorf/pix2pix/: __init__.py  blocks.py  discriminator.py  generator.py  residual.py  run.py
ganondorf/random/: __init__.py  normal.py
ganondorf/segmentation/: NL345_LOI_stats.txt  __main__.py  new_345_stats.txt  segment.py  segment_345.py
ganondorf/transfer/: __main__.py  segment_transfer.py  transfer.py  transfer_classif_old.py
tests/benchmark/: data.py
tests/data/: test_format_raw_data.py
(+57 files in other folders)
