[metadata]
name = ganondorf
version = 0.0.2
author = James Calo
author_email = jamesafcalo@gmail.com
description = A Gan Medical Image Learning Framework
long_description = file: README.md
long_description_content_type = text/reStructuredText
url = https://github.com/SagaraBattousai/ganondorf.git
classifiers = 
  Programming Language :: Python :: 3.8
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8, !=3.9.*
install_requires =
  matplotlib
  nest-asyncio
  numpy
  tensorboard
  tensorflow == 2.3
  tensorflow-federated == 0.17.0 #, <1.0.0
  tensorflow-addons
  SimpleITK
  attrs
include_package_data = True

[options.packages.find]
exclude = 
  tests
